# dcgan_sprite_ai

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  auto_compile.sh
capp/: DCGAN.cpp  DCGANUtils.cpp  DCGANUtils.h  DiscriminatorImpl.cpp  DiscriminatorImpl.h  DrawGraph.cpp  DrawGraph.h  GeneratorImpl.cpp  GeneratorImpl.h  ImageFolder.cpp  ImageFolder.h  SeqDiscriminator.cpp  SeqDiscriminator.h  Window.cpp  Window.h  main.cpp
cexamples/dcgan/: CMakeLists.txt  main.cpp
papp/: DCGAN.py  setup_env.bat
scripts/libs/: getlibs.sh
scripts/utility/: googledrive_file_download.sh
